--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.3",
+    "ng2-file-upload": "^3.0.0",
     "ngx-bootstrap": "^9.0.0",
     "ngx-bootstrap-modal": "^1.1.0",
     "ngx-owl-carousel-o": "^14.0.1",
